# pypi-auto-publish

./: .travis.yml  fredpullen  setup.cfg  setup.py
