[metadata]
name = bsdgames
author = joe
author-email = joehisaishi1943@gmail.com
summary = python wrapper for bsdgame
license = Apache
description-file = 
	README.rst
home-page = https://github.com/lucyking/pypi-auto-publish
requires-python = >=2.7
classifier = 
	Environment :: Console
	Intended Audience :: Developers
	Operating System :: OS Independent
	Programming Language :: Python :: 2.7

[files]
packages =
	bsdgames
